Fixed bug #68215 (Behavior of foreach has changed)